# EstatePilot

./: .gitignore  Caddyfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  config.py  pyproject.toml
backend/app/: __init__.py  forms.py  jwt_config.py  models.py
backend/app/api/: __init__.py  auth.py  invitations.py  notifications.py  tickets.py
backend/app/utils/: RBAC.py  __init__.py  upload.py
backend/migrations/versions/: 028c794bc565_add_manager_tenant_relationship_and_.py  1c6a29b7f4d8_add_user_and_technician_pincodes.py  2e9fd81a7d31_add_technician_profiles_services_reviews.py  3216dfe78dfb_added_manager_requests.py  469781e8dbf2_init.py  4bc06c161a4a_initial_migration.py  8548acd75d58_normalise_drop_ticket_manager_id_and_.py  9c4b4e91b2f7_split_user_profiles_and_add_ticket_bidding.py
backend/scripts/: seed_demo_data.py
backend/tests/: conftest.py  test_auth.py  test_invitation_model.py  test_invitations.py  test_models.py  test_technician_flow.py  test_tenant.py  test_uploads.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: Navbar.vue
frontend/src/router/: index.js
frontend/src/services/: api.js  dashboard.js
frontend/src/stores/: auth.js
frontend/src/views/: DashboardPage.vue  HomePage.vue  LoginPage.vue  ProfilePage.bak.vue  ProfilePage.vue  RegisterPage.vue  ServiceAreaPage.vue  TicketDetailPage.vue  TicketsPage.vue
(+22 files in other folders)
